# mbot

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
bots/facebook/: Cargo.toml
bots/facebook/src/: facebook.rs  main.rs
schedules/: schedule.md
src/: main.rs
src/kcli/: command.rs  http_fn.rs  kcli.rs
src/server/: call_agent.rs  db_func.rs  handler.rs  kserve.rs  kserverd.rs
