[package]
name = "mbot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
pulldown-cmark = "0.12"
axum = "0.8"
tower = "0.5"
tokio-cron-scheduler = "0.14"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = "0.13"
prost = "0.13"

[build-dependencies]
tonic-build = "0.13"
