[package]
name = "mbot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
pulldown-cmark = "0.12"
axum = "0.8"
tower = "0.5"
tokio-cron-scheduler = "0.14"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

dotenv = "0.15"



[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "kcli"
path = "src/kcli/kcli.rs"

[[bin]]
name = "kserve"
path = "src/server/kserve.rs"
